docs: 修正文档字段错误

--- a/docs/guide/upgrade/1.9-to-2.0.md
+++ b/docs/guide/upgrade/1.9-to-2.0.md
@@ -50,7 +50,7 @@ php artisan config:clear
     | `avatar` | `true` | `null` | VARCHAR 类型，长度 `255` | 用户头像 | 添加 |
     | `bg` | `true` | `null` | VARCHAR 类型，长度 `255` | 个人主页背景 | 添加 |
     | `email_verified_at` | `true` | `null` | timestamp 类型 | 邮箱认证时间 | 添加 |
-    | `email_verified_at` | `true` | `null` | timestamp 类型 | 手机号码认证时间 | 添加 |
+    | `phone_verified_at` | `true` | `null` | timestamp 类型 | 手机号码认证时间 | 添加 |
 - `feed_topics` 动态
 
     | 字段 | 可为空 | 默认值 | 其他 | 描述 | 操作 |
