--- a/docs/guide/upgrade/1.9-to-2.0.md
+++ b/docs/guide/upgrade/1.9-to-2.0.md
@@ -47,14 +47,16 @@ php artisan config:clear
 
     | 字段 | 可为空 | 默认值 | 其他 | 描述 | 操作 |
     |-----|----|----|----|----|-----|
-    | `avatar` | `true` | `null` | VARCHAR 类型 | 用户头像 | 添加 |
-    | `bg` | `true` | `null` | VARCHAR 类型 | 个人主页背景 | 添加 |
+    | `avatar` | `true` | `null` | VARCHAR 类型，长度 `255` | 用户头像 | 添加 |
+    | `bg` | `true` | `null` | VARCHAR 类型，长度 `255` | 个人主页背景 | 添加 |
+    | `email_verified_at` | `true` | `null` | timestamp 类型 | 邮箱认证时间 | 添加 |
+    | `phone_verified_at` | `true` | `null` | timestamp 类型 | 手机号码认证时间 | 添加 |
 - `feed_topics` 动态
 
     | 字段 | 可为空 | 默认值 | 其他 | 描述 | 操作 |
     |-----|----|----|----|----|----|
     | `logo` | | | | | 删除 |
-    | `logo` | `true` | `null` | VARCHAR 类型 | 话题 logo | 添加 |
+    | `logo` | `true` | `null` | VARCHAR 类型，长度 `255` | 话题 logo | 添加 |
 - `feed_topic_user_links` 动态
 
     | 字段 | 可为空 | 默认值 | 其他 | 描述 | 操作 |
@@ -65,9 +67,9 @@ php artisan config:clear
     
         | 字段 | 可为空 | 默认值 | 其他 | 描述 | 操作 |
         |-----|----|----|----|----|----|
-        | `repostable_type` | `true` | `null` | VARCHAR 类型 | 可转发的资源类型 | 添加 |
-        | `repostable_id` | `true` | `0` | integer 类型，unsigned | 可转发的资源 ID | 添加 |
-        | `hot` | `true` | `0` | int 类型，unsigned | 热门排序值 | 添加 |
+        | `repostable_type` | `true` | `null` | VARCHAR 类型，长度 `255` | 可转发的资源类型 | 添加 |
+        | `repostable_id` | `true` | `0` | integer 类型，unsigned，长度 `10` | 可转发的资源 ID | 添加 |
+        | `hot` | `true` | `0` | int 类型，unsigned，长度 `10` | 热门排序值 | 添加 |
     * 索引
     
         | 字段 | 索引类型 |
@@ -78,9 +80,9 @@ php artisan config:clear
 
     | 字段 | 可为空 | 默认值 | 其他 | 描述 | 操作 |
     |-----|----|----|----|----|----|
-    | `im_group_id` | `true` | `null` | varchar 类型 | 环信群组 ID | 添加 |
-    | `excellen_posts_count` | `true` | `0` | integer 类型，unsigned | 圈子精华贴统计 | 添加 |
-    | `avatar` | `true` | `null` | VARCHAR 类型 | 圈子头像 | 添加 |
+    | `im_group_id` | `true` | `null` | varchar 类型，长度 `255` | 环信群组 ID | 添加 |
+    | `excellen_posts_count` | `true` | `0` | integer 类型，unsigned ，长度 `10`| 圈子精华贴统计 | 添加 |
+    | `avatar` | `true` | `null` | VARCHAR 类型，长度 `255` | 圈子头像 | 添加 |
 - `group_posts` **授权**，圈子
     * 表字段
     
@@ -100,7 +102,7 @@ php artisan config:clear
 
     | 字段 | 可为空 | 默认值 | 其他 | 描述 | 操作 |
     |-----|----|----|----|----|----|
-    | `avatar` | `true` | `null` | varchar 类型 | 专题头像 | 添加 |
+    | `avatar` | `true` | `null` | varchar 类型，长度 `255` | 专题头像 | 添加 |
 
 上述数据表修改完成后进入 Plus 目录，执行下面的命令：
 
